# ousia

./: .gitignore  .gitmodules  Cargo.toml  README.md
example/: Cargo.toml
example/src/: asynchronous.rs  counter.rs  main.rs
forte/: Cargo.toml  build.rs
forte/src/: lib.rs  main.rs
forte/src/forte/: about_dialog.rs  action_bar.rs  adjustment.rs  alert_dialog.rs  alternative_trigger.rs  app_chooser_button.rs  app_chooser_widget.rs  application.rs  application_window.rs  aspect_frame.rs  assistant.rs  bool_filter.rs  box_.rs  box_layout.rs  button.rs  calendar.rs  cell_area_box.rs  cell_renderer_accel.rs  cell_renderer_combo.rs  cell_renderer_pixbuf.rs  cell_renderer_progress.rs  cell_renderer_spin.rs  cell_renderer_spinner.rs  cell_renderer_text.rs  cell_renderer_toggle.rs  cell_view.rs  center_box.rs  check_button.rs  color_button.rs  color_chooser_dialog.rs  color_chooser_widget.rs  color_dialog.rs  color_dialog_button.rs  column_view.rs  column_view_column.rs  combo_box.rs  combo_box_text.rs  constraint.rs  constraint_guide.rs  dialog.rs  (+119 more)
forte/src/prelude/: builder.rs  forte_macro.rs  inserters.rs  mod.rs
forte/src/prelude/prop/: map.rs  mod.rs  state.rs
forte/src/prelude/prop/glib_state/: mod.rs
forte/src/test/: mod.rs
forte/tests/: counter.rs
generation/: .env  Cargo.toml
generation/forte/: application.rs  application_window.rs  box_.rs  button.rs  label.rs  mod.rs
generation/src/: class.rs  generate.rs  lib.rs  module.rs  prop.rs  signal.rs  tests.rs
ousia/: Cargo.toml  build.rs
ousia/src/: lib.rs  main.rs
ousia/src/prelude/: builder.rs  inserters.rs  mod.rs  ousia_macro.rs  receiver.rs  use_subscription.rs
ousia/src/prelude/prop/: mod.rs  property.rs  state.rs
ousia/src/prelude/prop/glib_state/: imp.rs
ousia/src/test/: mod.rs
ousia_macros/src/: builder.rs
